RESOLVED FIXED96289
[V8] V8HTMLDocument::write and friends should not indirect through Frame
https://bugs.webkit.org/show_bug.cgi?id=96289
Summary [V8] V8HTMLDocument::write and friends should not indirect through Frame
Adam Barth
Reported 2012-09-10 10:57:40 PDT
[V8] V8HTMLDocument::write and friends should not indirect through Frame
Attachments
Patch (4.21 KB, patch)
2012-09-10 10:59 PDT, Adam Barth
no flags
Patch (4.21 KB, patch)
2012-09-10 11:14 PDT, Adam Barth
no flags
Adam Barth
Comment 1 2012-09-10 10:59:06 PDT
Kentaro Hara
Comment 2 2012-09-10 11:01:15 PDT
Comment on attachment 163167 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=163167&action=review LGTM but I'd like to delegate the review to eric. > Source/WebCore/ChangeLog:9 > + throught the Frame to find the active document. This patch makes these Nit: through
Adam Barth
Comment 3 2012-09-10 11:14:01 PDT
Eric Seidel (no email)
Comment 4 2012-09-10 11:14:55 PDT
Comment on attachment 163169 [details] Patch LGTM.
Adam Barth
Comment 5 2012-09-10 13:21:00 PDT
Comment on attachment 163169 [details] Patch Clearing flags on attachment: 163169 Committed r128095: <http://trac.webkit.org/changeset/128095>
Adam Barth
Comment 6 2012-09-10 13:21:02 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.